[project]
name = "extract-posts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]
